<resources>
    <string name="app_name">News</string>
    <string name="top_headlines">Headlines</string>
    <string name="saved_news">Your Library</string>
    <string name="content_description_media">Media</string>
    <string name="new_title">New Title</string>
    <string name="published_at">published at</string>
    <string name="content_description_bookmark">Bookmark</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search</string>
    <string name="btn_search_text">Query news, headlines or publishers</string>
    <string name="browse">Browse everything</string>
    <string name="category">Category</string>
    <string name="icon">Icon</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="content_description_settings">Settings</string>
    <string name="content_description_notifications">Notifications</string>
    <string name="content_description_history">History</string>
    <string name="content_description_mic">Mic</string>
    <string name="content_description_filter">Filter</string>
    <string name="search_result_status">Find what you interest</string>
    <string name="chip_item_1">title</string>
    <string name="chip_item_2">description</string>
    <string name="chip_item_3">content</string>
    <string name="none"> </string>
    <string name="content_description_autocomplete">autocomplete text\n</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="query_not_found">Query not found</string>
    <string name="find_what_you_interest">Find what you interest</string>
    <string name="favourites">Favourites</string>
    <string name="bookmarks">Bookmarks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="query">Query</string>
    <string name="recent_searches">Recent searches</string>
    <string name="bookmark">Bookmark</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="content_description_button">Button</string>
    <string name="search_in_everything">Search in everything</string>
    <string name="headlines">Headlines</string>
    <string name="everything">Everything</string>
    <string name="activated">activated</string>
    <string name="no_network_connection">No network connection</string>
    <string name="connection_lost">Connection lost</string>
    <string name="delete">Delete</string>
    <string name="add_to_bookmark">Add to bookmark</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="to">to</string>
    <string name="set_the_time_period_which_you_want_news_from">/set the time period which you want news from</string>
    <string name="select_the_language_you_want_to_get_news_for">/select the language you want to get news for</string>
    <string name="filter_cancel">Cancel</string>
    <string name="filter_apply">Apply</string>
</resources>