<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_marginVertical="5dp"
    android:layout_marginHorizontal="10dp"
    android:id="@+id/publisher_card"
    app:cardBackgroundColor="@color/publisher_card">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/name"
            style="@style/publisher_text_title"
            app:layout_constraintBottom_toBottomOf="@+id/icon_image"
            app:layout_constraintStart_toEndOf="@+id/icon_image"
            app:layout_constraintTop_toTopOf="@+id/icon_image" />

        <TextView
            android:id="@+id/description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="25dp"
            android:text="@string/description"
            android:textSize="12sp"
            style="@style/publisher_text_title"
            app:layout_constraintBottom_toTopOf="@+id/category_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon_image" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/titleDividerNoCustom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            app:dividerColor="@color/publisher_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_text" />

        <TextView
            android:id="@+id/category_text"
            android:text="@string/category"
            style="@style/publisher_text_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleDividerNoCustom" />

        <TextView
            android:id="@+id/country_text"
            android:text="@string/country"
            style="@style/publisher_text_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_text" />

        <TextView
            android:id="@+id/language_text"
            style="@style/publisher_text_default"
            android:layout_marginBottom="5dp"
            android:text="@string/language"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</androidx.cardview.widget.CardView>