<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    app:cardCornerRadius="0dp">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/resultImage"
            android:layout_width="125dp"
            android:layout_height="100dp"
            android:contentDescription="@string/content_description_media"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image_placeholder" />

        <TextView
            android:id="@+id/resultTitle"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:text="@string/new_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/resultDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/resultImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resultDate"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/published_at"
            android:textAppearance="?textAppearanceBody2"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/resultImage"
            app:layout_constraintTop_toBottomOf="@+id/resultTitle" />

        <TextView
            android:id="@+id/addToBookmark"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:paddingVertical="5dp"
            android:text="@string/add_to_bookmark"
            android:textAppearance="?textAppearanceBody2"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/bookmarkIcon"
            app:layout_constraintTop_toTopOf="@id/bookmarkIcon"
            app:layout_constraintEnd_toStartOf="@id/bookmarkIcon"
            tools:layout_editor_absoluteX="261dp" />

        <ImageView
            android:id="@+id/bookmarkIcon"
            android:contentDescription="@string/content_description_bookmark"
            android:layout_width="18dp"
            android:layout_height="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/resultTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp"
            app:srcCompat="@drawable/add_circle_24px" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>