<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="0dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/libraryImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/content_description_media"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/image_placeholder" />

        <TextView
            android:id="@+id/libraryTitle"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/new_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/libraryDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/libraryImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/libraryDate"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/published_at"
            android:textAppearance="?textAppearanceBody2"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/libraryImage"
            app:layout_constraintTop_toBottomOf="@id/libraryTitle" />

        <TextView
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:text="@string/delete"
            android:textSize="12sp"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAppearance="?textAppearanceBody2"
            android:textColor="@color/figma_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/libraryTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>